# aegis-box

./: .env  .env.example  .gitignore  ACTION_PLAN.md  ARCHITECTURE_REVIEW.md  AUDIT_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DAY2_INFRASTRUCTURE.md  DELIVERY_SUMMARY.md  HALL_OF_FAME.md  LAUNCH_SUMMARY.md  PHASE2_PLAN.md  PUBLISH_NOW.sh  QUICKSTART.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SELF_AUDIT_REPORT.md  STEP3_COMPLETION_REPORT.md  aegis.yaml.example  manual_context_sync.py  pyproject.toml  test_api_complete.py  test_api_improved.py  test_connection.py  test_zai.py
.aegis/reports/: architecture_report.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  greetings.yml
aegis/: __init__.py  cli.py
aegis/core/: __init__.py  adaptive_concurrency.py  config.py  llm.py  llm_zhipu.py  rate_limiter.py  smart_retry.py
aegis/engines/: __init__.py  context_injector.py  mapper.py  orchestrator.py  patcher.py  reducer.py  sweeper.py
aegis/utils/: diff_parser.py  git_sandbox.py  log_sanitizer.py
artifacts/: aegis_state.json
docs/: AEGIS_SELF_AUDIT_REPORT.md  API_KEY_SETUP.md  API_TEST_ANALYSIS.md  CONFIG_REFACTOR_VERIFICATION.md  CONTEXT_INJECTOR_COMPLETION.md  CUSTOM_ENDPOINT.md  DIFF_PARSER_COMPLETION.md  DOCUMENTATION_COMPLETION.md  E2E_INTEGRATION_COMPLETION.md  FINAL_RELEASE_READY.md  GIT_SANDBOX_COMPLETION.md  GLM_CONFIG_FIX.md  GLM_DEEP_OPTIMIZATION.md  HOTFIX_REPORT.md  LAUNCH_POST.md  LLM_CLIENT_COMPLETION.md  LLM_CLIENT_GUIDE.md  MODEL_CONFIG.md  ORCHESTRATOR_COMPLETION.md  POC_SUCCESS_REPORT.md  PYPROJECT_OPTIMIZATION.md  PYTHON_ALIAS_FIX.md  RC_VALIDATION.md  REDUCER_COMPLETION.md  REFACTORING_REPORT.md  REFACTORING_SUCCESS.md  RELEASE_GUIDE.md  SELF_AUDIT_DEMO.md  SMART_PATCHER_COMPLETION.md  TEST_CONNECTION_REPORT.md  ZHIPU_OPTIMIZATION.md  ZHIPU_SUMMARY.md  first_real_issues.md
docs/launch_posts/: 00_LAUNCH_CHECKLIST.md  01_hackernews.md  02_reddit.md  03_twitter.md
examples/: test_llm_client.py  test_zhipu_client.py
scripts/: benchmark_llm.py  generate_cli_docs.py  install_zhipu_sdk.sh  release.sh  run_poc.py  run_poc_anthropic.py  track_metrics.py  verify_hotfix.py  verify_infrastructure.sh  verify_install.sh  verify_phase3_5.py
tests/: __init__.py  dummy_vulnerable_app.py  test_config_integration.py  test_context_injector.py  test_diff_parser.py  test_git_sandbox.py  test_llm.py  test_mapper.py  test_orchestrator.py  test_patcher.py  test_reducer.py  test_sweeper.py
tests/integration/: __init__.py  test_full_pipeline.py
